Sync in the published version

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -10,6 +10,29 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Results of Online test 2
+
+```{figure} _static/img/notes/EMET7001quiz2.png
+:width: 80%
+
+Distribution of results for Online test 2
+```
+
+2. Teaching break: next two weeks **April 1st to 14th**
+  
+  - No teaching
+  - No tutorials
+  - Next lecture is on **April 16th**
+  - Next online test is on **April 22nd**, after the next lecture
+
+  `Have a good break!`
+
+````
+
 # 📖 Univariate differentiation
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
@@ -52,21 +75,20 @@ Consider a *univariate* function $f: \mathbb{R} \rightarrow \mathbb{R}$ written 
 
 The domain of $f$ is $\mathbb{R}$, the range of $f$ is a (possibly improper) subset of $\mathbb{R}$
 
-{cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$,
-if we can make $f(x)$ as close as we like to $l$ by requiring that $x$ be sufficiently close to, but unequal to, $a$.”
+{cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$, if we can make $f(x)$ as close as we like to $l$ by requiring that $x$ be sufficiently close to, but unequal to, $a$.”
 
 ```{admonition} Definition
 :class: caution
 
-The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as
-$0 < |x − a| < \delta$, $|f (x ) − l | < \epsilon$.
+The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x = a$] if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as $0 < |x − a| < \delta$, $|f(x) − l | < \epsilon$.
 ```
 
 The absolute value $|\cdot|$ in this definition plays the role of general distance function $\|\cdot\|$ which would be appropriate for the functions from $\mathbb{R}^n$ to $\mathbb{R}^k$.
+We will also use $d(x,a)$ to denote distance, i.e. $d(x,a) = |x-a|$.
 
 Suppose that the limit of $f$ as $x$ approaches $a$ is $l$. We can write this as
 
-$$ \lim_{x  \rightarrow a} f (x ) = l $$
+$$ \lim_{x  \rightarrow a} f(x) = l $$
 
 
 ```{figure} _static/img/lecture_06/epsilon_delta.png
@@ -83,7 +105,7 @@ Suppose that we want to attempt to show that $\lim _{x \rightarrow a} f(x)=b$.
 In order to do this, we need to show that, for any choice $\epsilon>0$, there exists some $\delta_{\epsilon}>0$ such that, whenever $|x-a|<\delta_{\epsilon}$, it is the case that $|f(x)-b|<\epsilon$.
 - We write $\delta_{\epsilon}$ to indicate that the choice of $\delta$ is allowed to vary with the choice of $\epsilon$.
 
-An often fruitful approach to the construction of a formal $\epsilon-\delta$ limit argument is to proceed as follows: 
+An often fruitful approach to the construction of a formal $\epsilon$-$\delta$ limit argument is to proceed as follows: 
 1. Start with the end-point that we need to establish: $|f(x)-b|<\epsilon$.
 2. Use appropriate algebraic rules to rearrange this "final" inequality into something of the form $|k(x)(x-a)|<\epsilon$.
 3. This new version of the required inequality can be rewritten as $|k(x)||(x-a)|<\epsilon$.
@@ -97,7 +119,7 @@ In other words, we try and find some restriction on $\delta$ that will ensure th
 If $0<|k(x)|<K$ whenever $0<\delta<D$, then we have
 
 $$
-|k(x)||x-a|<\epsilon \Longleftrightarrow K|x-a|<\epsilon \Longleftrightarrow|x-a|<\frac{\epsilon}{K} .
+|k(x)||x-a|<\epsilon \Longleftarrow K|x-a|<\epsilon \Longleftrightarrow|x-a|<\frac{\epsilon}{K} .
 $$
 
 In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon}=\min \left\{\frac{\epsilon}{K}, D\right\}$.
@@ -252,8 +274,8 @@ We want to show that $lim_{x \rightarrow 2} f(x ) = −1$.
 - Note that $|f(x) − (−1)| = |x^2 − 3x + 1 + 1| = |x^2 − 3x + 2| = |(x − 1)(x − 2)| = |x − 1||x − 2|$.
 - Suppose that $|x − 2| < \delta$, which in turn means that $(2 − \delta) < x < (2 + \delta)$. Thus we have $(1 − \delta) < (x − 1) < (1 + \delta)$.
 - Let us restrict attention to $\delta \in (0, 1)$. This gives us $0 < (x − 1) < 2$, so that $|x − 1| < 2$.
-- Thus, when $|x − 2| < \delta$ and $\delta \in (0, 1)$, we have $|f (x ) − (−1)| = |x − 1||x − 2| < 2\delta$.
-- We require $|f (x ) − (−1)| < \epsilon$. One way to ensure this is to set $\delta_\epsilon = \min(1, \frac{\epsilon}{2} )$.
+- Thus, when $|x − 2| < \delta$ and $\delta \in (0, 1)$, we have $|f(x) − (−1)| = |x − 1||x − 2| < 2\delta$.
+- We require $|f(x) − (−1)| < \epsilon$. One way to ensure this is to set $\delta_\epsilon = \min(1, \frac{\epsilon}{2} )$.
 ```
 
 
@@ -262,11 +284,9 @@ We want to show that $lim_{x \rightarrow 2} f(x ) = −1$.
 
 Limits can sometimes exist even when the function being considered is not so well behaved. One such example is provided by {cite:ps}`spivak2006` (pp. 91–92). It involves the use of a trigonometric function.
 
-As we will not be considering such functions elsewhere in this unit, this particular example will not assessed in this unit. However, the fact that a function might have a limit at a point where it is not defined is worth noting.
+The example involves the function $f: \mathbb{R} \setminus 0 \rightarrow \mathbb{R}$ that is defined by $f(x) = x sin ( \frac{1}{x})$.
 
-The example involves the function $f: \mathbb{R} \setminus 0 \rightarrow \mathbb{R}$ that is defined by $f (x ) = x sin ( \frac{1}{x})$.
-
-Clearly this function is not defined when $x = 0$. Furthermore, it can be shown that $\lim_{x  \rightarrow 0} sin ( \frac{1}{x})$ does not exist. However, it can also be shown that $lim_{x  \rightarrow 0} f (x ) = 0$.
+Clearly this function is not defined when $x = 0$. Furthermore, it can be shown that $\lim_{x  \rightarrow 0} sin ( \frac{1}{x})$ does not exist. However, it can also be shown that $lim_{x  \rightarrow 0} f(x) = 0$.
 
 The reason for this is that $sin (\theta) \in [−1, 1]$ for all $\theta \in \mathbb{R}$. Thus $sin ( \frac{1}{x} )$ is bounded above and below by finite numbers as $x \rightarrow 0$. This allows the $x$ component of $x sin (\frac{1}{x})$ to dominate as $x \rightarrow 0$.
 ```
@@ -285,7 +305,7 @@ f(x ) = \begin{cases}
 \end{cases}
 $$
 
-We want to show that $\lim_{x  \rightarrow 5} f (x )$ does not exist.
+We want to show that $\lim_{x  \rightarrow 5} f(x)$ does not exist.
 
 Suppose that the limit does exist. Denote the limit by $l$. Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$. Let $\delta > 0$.
 
@@ -294,13 +314,13 @@ If $|5 − x | < \delta$, then $5 − \delta < x < 5 + \delta$, so that $x \in (
 Note that $x \in (5 − \delta, 5 + \delta) = (5 − \delta, 5) \cup [5, 5 + \delta)$, where $(5 − \delta, 5) \ne \varnothing$ and $[5, 5 + \delta) \ne \varnothing$.
 
 Thus we know the following:
-1. There exist some $x \in (5 − \delta, 5) \subseteq (5 − \delta, 5 + \delta)$, so that $f (x ) = 0$ for some $x \in (5 − \delta, 5 + \delta)$.
-2. There exist some $x \in [5, 5 + \delta) \subseteq (5 − \delta, 5 + \delta)$, so that $f (x ) = 1$ for some $x \in (5 − \delta, 5 + \delta)$.
-3. The image set under $f$ for $(5 − \delta, 5 + \delta)$ is $f ((5 − \delta, 5 + \delta)) = \{ f (x ) : x \in (5 − \delta, 5 + \delta) \} = \{ 0, 1 \} \subseteq [0, 1]$.
+1. There exist some $x \in (5 − \delta, 5) \subseteq (5 − \delta, 5 + \delta)$, so that $f(x) = 0$ for some $x \in (5 − \delta, 5 + \delta)$.
+2. There exist some $x \in [5, 5 + \delta) \subseteq (5 − \delta, 5 + \delta)$, so that $f(x) = 1$ for some $x \in (5 − \delta, 5 + \delta)$.
+3. The image set under $f$ for $(5 − \delta, 5 + \delta)$ is $f ((5 − \delta, 5 + \delta)) = \{ f(x) : x \in (5 − \delta, 5 + \delta) \} = \{ 0, 1 \} \subseteq [0, 1]$.
 4. Note that for any choice of $\delta > 0$, $[0, 1]$ is the smallest connected interval that contains the image set $f ((5 − \delta, 5 + \delta)) = \{ 0, 1 \}$.
 
 Hence, in order for the limit to exist, we need $[0, 1] \subseteq (l − \epsilon, l + \epsilon)$
-for all $\epsilon > 0$.  But for $\epsilon \in (0, \frac{1}{2})$, there is no $l \in \mathbb{R}$ for which this is the case.  Thus we can conclude that $\lim_{x  \rightarrow 5} f (x )$ does not exist.
+for all $\epsilon > 0$.  But for $\epsilon \in (0, \frac{1}{2})$, there is no $l \in \mathbb{R}$ for which this is the case.  Thus we can conclude that $\lim_{x  \rightarrow 5} f(x)$ does not exist.
 ```
 
 
@@ -415,7 +435,7 @@ where
 3. If $f$ and $g$ are continuous at $x$ and real valued then so is
 $f \circ g$, where
 :::{math}
-(f \circ g)(x) := f(x) \cdot g(x)
+(f \circ g)(x) := f( g(x))
 :::
 In the latter case, if in addition $g(x) \ne 0$, then $f/g$ is also continuous.
 
@@ -487,29 +507,29 @@ Consider the mapping $f : \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) =
 
 Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$.
 
-Note that $|f (2) − f (x )| = |f (x ) − f (2)| = |x^2 − 4| = |x − 2||x + 2|$.
+Note that $|f (2) − f(x)| = |f(x) − f (2)| = |x^2 − 4| = |x − 2||x + 2|$.
 
 Suppose that $|2 − x | < \delta$. This means that $|x − 2| < \delta$, which in turn means that $(2 − \delta) < x < (2 + \delta)$. Thus we have $(4 − \delta) < (x + 2) < (4 + \delta)$.
 
 Let us restrict attention to $\delta \in (0, 1)$. This gives us $3 < (x + 2) < 5$, so that $|x + 2| < 5$.
 
-We have $|f (2) − f (x )| = |f (x ) − f (2)| = |x − 2||x + 2| < (\delta)(5) = 5\delta$.
+We have $|f (2) − f(x)| = |f(x) − f (2)| = |x − 2||x + 2| < (\delta)(5) = 5\delta$.
 
-We require $|f (2) − f (x )| < \epsilon$. One way to ensure this is to set $\delta = min(1, \frac{\epsilon}{5})$.
+We require $|f (2) − f(x)| < \epsilon$. One way to ensure this is to set $\delta = min(1, \frac{\epsilon}{5})$.
 ```
 
 ```{admonition} Example
 :class: tip
 
-Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x$. We want to show that $f (x )$ is continuous for all $x \in X$.
+Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x$. We want to show that $f(x)$ is continuous for all $x \in X$.
 
 Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$.
 
-Consider an arbitrary point $x = a$. Note that $|f (a) − f (x )| = |a − x |$.
+Consider an arbitrary point $x = a$. Note that $|f (a) − f(x)| = |a − x |$.
 
 Suppose that $|a − x | < \delta$.
 
-Note that if we set $\delta = \epsilon$, we have $|f (a) − f (x )| < \epsilon$. 
+Note that if we set $\delta = \epsilon$, we have $|f (a) − f(x)| < \epsilon$. 
 
 Thus we know that $f$ is continuous at the point $x = a$. Since $a$ was chosen arbitrarily, we now that this is true for all $a \in \mathbb{R}$. This means that $f$ is continuous for all $x \in \mathbb{R}$.
 ```
@@ -528,11 +548,11 @@ f(x ) =
 \end{cases}
 $$
 
-We have already shown that $\lim_{x  \rightarrow 5} f (x )$ does not exist. This means that it is impossible for $lim_{x  \rightarrow 5} f (x ) = f (5)$. As such, we know that $f (x )$ is not continuous at the point $x = 5$.
+We have already shown that $\lim_{x  \rightarrow 5} f(x)$ does not exist. This means that it is impossible for $lim_{x  \rightarrow 5} f(x) = f (5)$. As such, we know that $f(x)$ is not continuous at the point $x = 5$.
 
-This means that f (x ) is not a continuous function. 
+This means that f(x) is not a continuous function. 
 
-However, it can be shown that (i) $f(x )$ is continuous on the interval $(−\infty, 5)$, and that (ii) $f (x )$ is continuous on the interval $(5, \infty)$. Can
+However, it can be shown that (i) $f(x )$ is continuous on the interval $(−\infty, 5)$, and that (ii) $f(x)$ is continuous on the interval $(5, \infty)$. Can
 you explain why this is the case?
 ```
 
@@ -543,7 +563,7 @@ you explain why this is the case?
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by 
 
 $$
-f (x ) = \begin{cases}
+f(x) = \begin{cases}
 \frac{1}{x} \quad \text{ if } x \ne 0; \\
 0 \quad \text{ if } x = 0.
 \end{cases}
@@ -560,7 +580,7 @@ This function is discontinuous at the point $x = 0$. *Illustrate the graph of th
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by
 
 $$
-f (x ) = \begin{cases} 
+f(x) = \begin{cases} 
 1 \quad \text{ if } x \in Q; \\
 0 \quad \text{ if } x \notin Q
 \end{cases}
@@ -578,7 +598,7 @@ If it exists, the derivative of a function tells us the direction and magnitude 
 
 If it exists, the derivative of a function at a point is equal to the slope of the straight line that is tangent to the function at that point. 
 
-You should try and guess now what the derivative of a linear function of the form $f (x ) = ax + b$ will be.
+You should try and guess now what the derivative of a linear function of the form $f(x) = ax + b$ will be.
 
 ### Definition
 
@@ -1300,7 +1320,8 @@ The same approach can be used for defining third and higher order derivative.
 The $n$-th order derivative of a function $f \colon \mathbb{R} \to \mathbb{R}$, if it exists, is the derivative of it's $(n-1)$-th order derivative treated as an independent function.
 
 $$
-f^{(k)}(x)=\frac{d^{k} f}{d x^{k}}=\frac{d}{d x}\left(\frac{d^{k-1} f}{d x^{k-1}}\right)
+f^{(k)}(x)=\frac{d^{k} f}{\underbrace{dx \cdots dx}_{k}}=
+\frac{d}{d x}\left(\frac{d^{k-1} f}{\underbrace{dx \cdots dx}_{k-1}}\right)
 $$
 
 for all $k \in\{1,2, \cdots, n\}$, where we define
@@ -1333,6 +1354,13 @@ $$
 
 
 ## Taylor series
+
+```{admonition} Definition
+:class: caution
+
+The function $f: X \to \mathbb{R}$ is said to be of differentiability class $C^m$ if derivatives $f'$, $f''$, $\dots$, $f^{(m)}$ exist and are continuous on $X$
+
+```
 
 ```{admonition} Fact
 :class: important
@@ -1513,7 +1541,7 @@ The two terms that make up marginal revenue for a monopolist can be given a very
 
 ### Point elasticities
 
-```{admonition} Definition
+```{admonition} Definition (in words)
 :class: caution
 
 Suppose that $y=f(x)$. The **elasticity of $y$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$.
@@ -1548,11 +1576,13 @@ Define a new function $g$ such that $f(x) = g\big(\ln(x)\big)$ and $f\big(x(1+r)
 Continuing the above, and noting that $\ln(1+r) \to 0$ as $r \to 0$ we have
 
 $$
+\begin{array}{l}
 = \frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{r} = \\ =
 \frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \frac{\ln(1+r)}{r} = \\ =
 \frac{1}{f(x)} \left[ \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \lim_{r \to 0} \frac{\ln(1+r)}{r} \right] =\\=
 \frac{1}{f(x)} \frac{d g(\ln(x))}{d \ln(x)} = 
 \frac{1}{f(x)} \frac{d f(x)}{d \ln(x)} = \frac{x}{f(x)} \frac{d f(x)}{d x}
+\end{array}
 $$
 
 See the example above showing that $\lim_{r \to 0} \frac{\ln(1+r)}{r} = 1$.
@@ -1561,7 +1591,7 @@ In the last step, to make sense of the expression $\frac{d f(x)}{d \ln(x)}$, ima
 Then we can use the chain rule and the inverse function rule to show that
 
 $$
-\frac{d f(x)}{d \ln(x)} = \frac{d f(x)}{d x} \frac{dx}{d \ln(x)} = \frac{d f(x)}{d x} \frac{1}{\frac{1}{x}} = x 
+\frac{d f(x)}{d \ln(x)} = \frac{d f(x)}{d x} \frac{dx}{d \ln(x)} = \frac{d f(x)}{d x} \frac{1}{\frac{1}{x}} = x \frac{d f(x)}{d x}
 $$
 
 Note, in addition, that by the chain rule the following also holds
@@ -1570,7 +1600,9 @@ $$
 \frac{d \ln f(x)}{d \ln(x)} = \frac{1}{f(x)} \frac{d f(x)}{d \ln(x)}
 $$
 
-```{admonition} Definition
+Putting everything together, we arrive at the following equivalent expressions for elasticity.
+
+```{admonition} Definition (exact)
 :class: caution
 
 The (point) **elasticity of $f(x)$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$, and is given by
@@ -1618,7 +1650,7 @@ $$
 \end{align*}
 $$
 
-More generally, we can show that, for the linear demand cuve above, we have
+More generally, we can show that, for the linear demand curve above, we have
 
 $$
 | \epsilon^D_P (P) | =
@@ -1666,8 +1698,36 @@ Constant own-price elasticity!
 Alternatively we could compute this elasticity as
 
 $$
-Q &= a/P \quad \Leftrightarrow \quad \ln Q = \ln a - \ln P \\
+Q &= a/P = a P^{-1} \quad \Leftrightarrow \quad \ln Q = \ln a - \ln P \\
 \epsilon^D_P (P) &= \frac{d \ln Q}{d \ln P} = -1
 $$
 
+```
+
+
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/26mar/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/3.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/4.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/5.png
+   :width: 75%
+```
+
+````
+
+```{dropdown} Further reading and self-learning
+- Great video on Taylor series [YouTube Morphocular](https://youtu.be/0HaBNdmUWXY?si=Fcps8tuAvEJMOyOR)
 ```
