--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -10,15 +10,23 @@ kernelspec:
   name: python3
 ---
 
-```{admonition} DRAFT
-:class: danger
 
-This is a DRAFT of the future lecture!
-```
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Welcome to the second half of the course! 
+2. Don't forget about the Online Test on **Monday April 22**.
+3. Starting with a review and [point elasticities](https://math.iskh.me/06.univariate_differentiation.html#point-elasticities)
+
+
+````
+
 
 # 📖 Vector and matrix arithmetics 
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 
 ````{dropdown} Sources and reading guide
 
@@ -92,7 +100,9 @@ a_{11} & a_{12} & a_{13} & \cdots & a_{1 m}
 $$
 
 
-### Economic examples of matrices and vectors
+```{admonition} Economic examples of matrices and vectors
+:class: tip
+
 
 - The $(L \times 1)$ price vector for an economy there are $L$ commodities:
 
@@ -119,26 +129,30 @@ x_{L}(p, y)
 $$
 
 
-- The $(n \times k)$ "design matrix" (that is, matrix of independent variables) in a multivariate linear regression model of the form
+- The $(n \times k)$ *design matrix* (that is, matrix of independent variables) in a multivariate linear regression model of the form
 
 $$
-y_{i}=\beta_{0}+\sum_{j=1}^{k-1} \beta_{j} x_{i, j}+\epsilon_{i}
+y_{i} = 
+\beta_{1}+\sum_{j=2}^{k} \beta_{j} x_{i, j}+\epsilon_{i} =
+\sum_{j=1}^{k} \beta_{j} x_{i, j}+\epsilon_{i}
 $$
 
 where there are observations of all of the observable variables for each of $n$ sample points.
 
-- This matrix takes the form
+- The design matrix takes the form
 
 $$
 X=\left(\begin{array}{ccccc}
-1 & x_{1,2} & x_{1,3} & \cdots & x_{1,(k-1)} \\
-1 & x_{2,2} & x_{2,3} & \cdots & x_{2,(k-1)} \\
-1 & x_{3,2} & x_{3,3} & \cdots & x_{3,(k-1)} \\
+1 & x_{1,2} & x_{1,3} & \cdots & x_{1,k} \\
+1 & x_{2,2} & x_{2,3} & \cdots & x_{2,k} \\
+1 & x_{3,2} & x_{3,3} & \cdots & x_{3,k} \\
 \vdots & \vdots & \vdots & \ddots & \vdots \\
-1 & x_{n, 2} & x_{n, 3} & \cdots & x_{n,(k-1)}
+1 & x_{n, 2} & x_{n, 3} & \cdots & x_{n,k}
 \end{array}\right)
 $$
 
+
+```
 
 
 ## An overview of matrix arithmetic
@@ -221,8 +235,6 @@ $$
 
 Note that $c A=A c$. As such, we can just talk about the **scalar product** of a constant with a matrix, without specifying the order in which the multiplication takes place.
 
-
-### Some examples of scalar multiplication of a matrix
 
 The following examples come from {cite:ps}`asano2013` (pp. 222-224).
 
@@ -383,13 +395,17 @@ $$
 Note that $A+B=B+A$. (Exercise: Convince yourself of the validity of this claim.)
 
 
-### Some examples of matrix addition
 
-- Suppose that $A$ is an $(m \times n)$ matrix, $B$ is an $(n \times m)$ matrix and $C$ is an $(n \times p)$ matrix, where $m \neq n, m \neq p$ and $n \neq p$.
-- Example 1: Neither the matrix sum $A+B$ nor the matrix sum $B+A$ are defined.
-- Example 2: Neither the matrix sum $A+C$ nor the matrix sum $C+A$ are defined.
-- Example 3: Neither the matrix sum $B+C$ nor the matrix sum $C+B$ are defined.
+```{admonition} Example
+:class: tip
 
+Suppose that $A$ is an $(m \times n)$ matrix, $B$ is an $(n \times m)$ matrix and $C$ is an $(n \times p)$ matrix, where $m \neq n, m \neq p$ and $n \neq p$.
+
+- Neither the matrix sum $A+B$ nor the matrix sum $B+A$ are defined.
+- Neither the matrix sum $A+C$ nor the matrix sum $C+A$ are defined.
+- Neither the matrix sum $B+C$ nor the matrix sum $C+B$ are defined.
+
+```
 
 The following examples come from {cite:ps}`asano2013` (pp. 222-224).
 
@@ -465,7 +481,8 @@ $$
 ```
 
 
-### An economic example of matrix addition
+```{admonition} Economic example of matrix addition
+:class: tip
 
 - Suppose that there are $I$ consumers in an economy, each of whom has preferences defined over bundles of the same $L$ commodities.
 - Suppose that consumer $i$'s Marshallian demand vector is given by the column vector
@@ -502,6 +519,8 @@ x_{L}^{i}\left(p, y^{i}\right)
 \end{array}\right)
 \end{aligned}
 $$
+```
+
 
 
 ### Matrix subtraction
@@ -554,7 +573,7 @@ $$
 
 In general, $A-B \neq B-A$. Thus matrix subtraction does not share all of the properties of matrix addition.
 
-Exercise: Under what circumstances will $A-B=B-A$ ?
+**Exercise:** Under what circumstances will $A-B=B-A$ ?
 
 
 ```{admonition} Example
@@ -776,7 +795,8 @@ Note that $A C \neq C A$.
 ```
 
 
-#### An economic example of matrix multiplication
+```{admonition} Economic example of matrix multiplication
+:class: tip
 
 Suppose that a consumer whose preferences are defined over bundles of $L$ commodities faces a price vector given by the row vector $p=\left(p_{1}, p_{2}, \cdots, p_{L}\right)$ and chooses to purchase the quantities of each commodity that are given by the column vector
 
@@ -805,6 +825,8 @@ q_{L}
 =\sum_{I=1}^{L} p_{I} q_{I} .
 \end{gathered}
 $$
+
+```
 
 
 ### Matrix transposition
@@ -943,7 +965,7 @@ $$
 \end{array}\right)
 $$
 
-The $(n \times m)$ null matrix is the ADDITIVE identity matrix for the space of all $(n \times m)$ null matrices. This means that if $A$ is an $(n \times m)$ matrix, then $A+0=0+A=A$.
+The $(n \times m)$ null matrix is the *ADDITIVE* identity matrix for the space of all $(n \times m)$ null matrices. This means that if $A$ is an $(n \times m)$ matrix, then $A+0=0+A=A$.
 
 
 ### Additive inverses
@@ -972,7 +994,8 @@ B=-A=\left(\begin{array}{cccc}
 \end{array}\right)
 $$
 
-#### An example of an additive inverse matrix
+```{admonition} Example
+:class: tip
 
 Note that
 
@@ -1020,6 +1043,8 @@ B+A &=\left(\begin{array}{ll}
 $$
 
 Since $A+B=B+A=0_{(2 \times 2)}$, we can conclude that $B$ is the additive inverse for $A$.
+```
+
 
 
 ### Identity matrices
@@ -1033,7 +1058,7 @@ I=\left(\begin{array}{ll}
 \end{array}\right)
 $$
 
-The $(n \times n)$ identity matrix is the MULTIPLICATIVE identity matrix for any relevant space of matrices:
+The $(n \times n)$ identity matrix is the *MULTIPLICATIVE* identity matrix for any relevant space of matrices:
 - If $A$ is an $(n \times n)$ matrix, then $A I=I A=A$.
 - If $A$ is an $(m \times n)$ matrix, then $A I=A$.
 - If $A$ is an $(n \times m)$ matrix, then $I A=A$.
@@ -1053,7 +1078,9 @@ The $(n \times n)$ matrix $B$ is the **multiplicative inverse** (usually just re
     - If $A$ is a non-singular square matrix whose multiplicative inverse is $A^{-1}$, then we have $\left(A^{-1}\right)^{T}=\left(A^{T}\right)^{-1}$.
 
 
-#### An example of a multiplicative inverse matrix
+
+```{admonition} Example
+:class: tip
 
 This example comes from {cite:ps}`haeussler1987` (p. 278, Example 1).
 - Note that
@@ -1112,17 +1139,21 @@ $$
 
 Since $A B=B A=I$, we can conclude that $A^{-1}=B$.
 
+```
+
 
 ### Idempotent matrices
 
 - A matrix $A$ is said to be **idempotent** if and only if $A A=A$.
-- Clearly a NECESSARY condition for matrix to be idempotent is that $A$ be a square matrix. (Exercise: Explain why this is the case.)
+- Clearly a NECESSARY condition for matrix to be idempotent is that $A$ be a square matrix. 
+  **Exercise:** Explain why
 - However, this is NOT a SUFFICIENT condition for a matrix to be idempotent. In general, $A A \neq A$, even for square matrices.
 - Two examples of idempotent matrices that you have already encountered are square null matrices and identity matrices.
 - We will shortly encounter two more examples. These are the Hat matrix $(P)$ and the residual-making matrix $(M=I-P)$ from statistics and econometrics.
 
 
-#### Some examples of idempotent matrices
+```{admonition} Example
+:class: tip
 
 - The $(2 \times 2)$ identity matrix:
 
@@ -1182,8 +1213,10 @@ $$
 $$
 
 
+```
 
-### Econometric example: the classical linear regression model
+
+## Econometric application: the classical linear regression model
 
 One of simplest models that you will encounter in statistics and econometrics is the classical linear regression model (CLRM). This model takes the form
 
@@ -1201,7 +1234,7 @@ $$
 
 where 0 is an $(n \times 1)$ null vector, $l$ is an $(n \times n)$ identity matrix and $\sigma^{2}$ is an unknown parameter.
 
-#### Matrices associated with the CLRM
+### Matrices associated with the CLRM
 
 - The ordinary least squares estimator (and, in the case of the CLRM, maximum likelihood estimator) of the parameter vector $\beta$ in the CLRM is given by
 
@@ -1224,7 +1257,7 @@ M & =I-P \\
 \end{aligned}
 $$
 
-#### The hat matrix is symmetric
+### The hat matrix is symmetric
 
 $$
 \begin{aligned}
@@ -1237,19 +1270,19 @@ P^{T} & =\left(X\left(X^{T} X\right)^{-1} X^{T}\right)^{T} \\
 \end{aligned}
 $$
 
-#### The hat matrix is idempotent
+### The hat matrix is idempotent
 
 $$
 \begin{aligned}
-P P & =\left(x\left(x^{T} x\right)^{-1} x^{T}\right)\left(x\left(x^{T} x\right)^{-1} x^{T}\right) \\
-& =x\left(x^{T} x\right)^{-1} x^{T} x\left(x^{T} x\right)^{-1} x^{T} \\
-& =x\left(x^{T} x\right)^{-1} I X^{T} \\
-& =x\left(x^{T} x\right)^{-1} x^{T} \\
+P P & =\left(x\left(X^{T} X\right)^{-1} X^{T}\right)\left(X\left(X^{T} X\right)^{-1} X^{T}\right) \\
+& =X\left(X^{T} X\right)^{-1} X^{T} X\left(X^{T} X\right)^{-1} X^{T} \\
+& =X\left(X^{T} X\right)^{-1} I X^{T} \\
+& =X\left(X^{T} X\right)^{-1} X^{T} \\
 & =P
 \end{aligned}
 $$
 
-#### The residual-making matrix is symmetric
+### The residual-making matrix is symmetric
 
 $$
 \begin{aligned}
@@ -1260,7 +1293,7 @@ M^{T} & =(I-P)^{T} \\
 \end{aligned}
 $$
 
-#### The residual-making matrix is idempotent
+### The residual-making matrix is idempotent
 
 $$
 \begin{aligned}
@@ -1275,20 +1308,406 @@ $$
 
 ## Determinant of a matrix
 
-- 2x2 case 
+Determinant is a fundamental characteristic of any matrix $A$ and a linear operator given by a matrix $A$
 
-- 3x3 case
+```{Note}
 
-- General case
+Determinants are only defined for square matrices, so in this section we only consider square matrices.
+```
 
-    - Minors
-    - General formula
+
+- we use some sort of *recursive definition*
+
+```{admonition} Definition
+:class: caution
+
+For a square $2 \times 2$ matrix the determinant is given by
+
+%
+$$
+%
+\det 
+\left(
+\begin{array}{cc}
+a & b \\
+c & d \\
+\end{array}
+\right)
+= ad - bc
+%
+$$
+%
+```
+
+Notation for the determinant is either $\det(A)$ or sometimes $|A|$
+
+```{admonition} Example
+:class: tip
+
+%
+$$
+%
+\det 
+\left(
+\begin{array}{cc}
+2 & 0 \\
+7 & -1 \\
+\end{array}
+\right)
+= (2 \times -1) - (7 \times 0) = -2
+%
+$$
+%
+
+```
+
+We build the definition of the determinants of larger matrices from $2 \times 2$ case. Think of the next definitions as a 'induction step'
+
+```{admonition} Definition
+:class: caution
+
+Consider an $n \times n$ matrix $A$.
+Denote $A_{ij}$ a $(n-1) \times (n-1)$ submatrix of $A$, obtained by deleting the $i$-th row and $j$-th column of $A$. Then
+
+- the $(i,j)$-th **minor** of $A$ denoted $M_{ij}$ is
+
+$$
+M_{ij} = \det(A_{ij})
+$$
+
+- the $(i,j)$-th **cofactor** of $A$ denoted $C_{ij}$
+
+$$
+C_{ij} = (-1)^{i+j} M_{ij} = (-1)^{i+j} \det(A_{ij})
+$$
+
+```
+
+- cofactors are signed minors
+- signs alternate in checkerboard pattern
+- for even $i+j$ minors and cofactors are equal
+
+```{admonition} Definition
+:class: caution
+
+The determinant of an $n \times n$ matrix $A$ with elements $\{a_{ij}\}$ is given by
+
+$$
+\det(A) = \sum_{i=1}^n a_{ij} C_{ij} = \sum_{j=1}^n a_{ij} C_{ij}
+$$
+
+for any choice of $i$ or $j$.
+
+```
+
+- given that the cofactors are lower dimension determinants, we can use the same formula to compute determinants of matrices of all sizes
+
+
+```{admonition} Example
+:class: tip
+
+$$
+\left|
+\begin{array}{ccc}
+a_{11},& a_{12},& a_{13} \\
+a_{21},& a_{22},& a_{23} \\
+a_{31},& a_{32},& a_{33}
+\end{array}
+\right| 
+=
+a_{11}
+\left|
+\begin{array}{ccc}
+a_{22},& a_{23} \\
+a_{32},& a_{33}
+\end{array}
+\right|
++ (-1)^3 a_{21}
+\left|
+\begin{array}{ccc}
+a_{12},& a_{13} \\
+a_{32},& a_{33}
+\end{array}
+\right|
++ a_{31}
+\left|
+\begin{array}{ccc}
+a_{12},& a_{13} \\
+a_{22},& a_{23}
+\end{array}
+\right| 
+= \\
+a_{11} (a_{22}a_{33} - a_{23}a_{32})
+- a_{21} (a_{12}a_{33}-a_{13}a_{32})
++ a_{31} (a_{12}a_{23}-a_{13}a_{22})
+= \\
+a_{11} a_{22}a_{33} 
++ a_{21}a_{13}a_{32})
++ a_{31}a_{12}a_{23}
+- a_{11}a_{23}a_{32})
+- a_{21}a_{12}a_{33}
+- a_{31}a_{13}a_{22})
+$$
+
+$$
+\left|
+\begin{array}{ccc}
+a_{11},& a_{12},& a_{13} \\
+a_{21},& a_{22},& a_{23} \\
+a_{31},& a_{32},& a_{33}
+\end{array}
+\right| 
+=
+a_{11}
+\left|
+\begin{array}{ccc}
+a_{22},& a_{23} \\
+a_{32},& a_{33}
+\end{array}
+\right|
++ (-1)^3 a_{12}
+\left|
+\begin{array}{ccc}
+a_{21},& a_{23} \\
+a_{31},& a_{33}
+\end{array}
+\right|
++ a_{13}
+\left|
+\begin{array}{ccc}
+a_{21},& a_{22} \\
+a_{31},& a_{32}
+\end{array}
+\right| 
+= \\
+a_{11} (a_{22}a_{33} - a_{23}a_{32})
+- a_{12} (a_{21}a_{33}-a_{23}a_{31})
++ a_{13} (a_{21}a_{32}-a_{22}a_{31})
+= \\
+a_{11} a_{22}a_{33} 
++ a_{12}a_{23}a_{31})
++ a_{13}a_{21}a_{32}
+- a_{11}a_{23}a_{32})
+- a_{12}a_{21}a_{33}
+- a_{13}a_{22}a_{31})
+$$
+
+```
+
+
+
+````{admonition} Fact
+:class: important
+
+Determinant of $3 \times 3$ matrix can be computed by the **triangles rule**:
+%
+$$
+\mathrm{det}
+\left(
+\begin{array}{ccc}
+a_{11},& a_{12},& a_{13} \\
+a_{21},& a_{22},& a_{23} \\
+a_{31},& a_{32},& a_{33}
+\end{array}
+\right)
+=
+\begin{array}{l}
++ a_{11}a_{22}a_{33} \\
++ a_{12}a_{23}a_{31} \\
++ a_{13}a_{21}a_{32} \\
+- a_{13}a_{22}a_{31} \\
+- a_{12}a_{21}a_{33} \\
+- a_{11}a_{23}a_{32}
+\end{array}
+$$
+%
+
+```{figure} _static/img/lecture_07/det33.png
+:scale: 100%
+:align: center
+```
+````
+
+```{admonition} Examples for quick computation
+:class: tip
+
+$$
+\mathrm{det}
+\left(
+\begin{array}{cc}
+5,& 1 \\
+0,& 1 
+\end{array}
+\right)
+\quad \quad
+\mathrm{det}
+\left(
+\begin{array}{cc}
+2,& 1 \\
+1,& 2 
+\end{array}
+\right)
+$$
+
+$$
+\mathrm{det}
+\left(
+\begin{array}{ccc}
+1,& 5,& 8 \\
+0,& 2,& 1 \\
+0,& -1,& 2
+\end{array}
+\right)
+\quad \quad
+\mathrm{det}
+\left(
+\begin{array}{ccc}
+1,& 0,& 3 \\
+1,& 1,& 0 \\
+0,& 0,& 8
+\end{array}
+\right)
+$$
+
+$$
+\mathrm{det}
+\left(
+\begin{array}{cccc}
+1,& 5,& 8,& 17 \\
+0,& -2,& 13,& 0 \\
+0,& 0,& 1,& 2 \\
+0,& 0,& 0,& 2
+\end{array}
+\right)
+\quad \quad
+\mathrm{det}
+\left(
+\begin{array}{cccc}
+2,& 1,& 0,& 0 \\
+1,& 2,& 0,& 0 \\
+0,& 0,& 2,& 0 \\
+0,& 0,& 0,& 2
+\end{array}
+\right)
+$$
+
+```
+
 
 ### Properties of determinants
 
-- operations and properties
+Important facts concerning the determinants
+
+```{admonition} Fact
+:class: important
+
+If $I$ is the $N \times N$ identity, $A$ and $B$ are $N \times N$ matrices and $\alpha \in \mathbb{R}$, then
+%
+1. $\det(I) = 1$ 
+
+2. $\det(A) = \det(A^T)$ 
+
+3. $\det(AB) = \det(A)
+\det(B)$
+
+4. $\det(\alpha A) = \alpha^N \det(A)$
+
+9. $\det(A^{-1}) = (\det(A))^{-1}$
+```
+
+```{admonition} Example
+:class: tip
+
+Compute the determinant of the $(n \times n)$ matrix
+
+$$
+\det
+\left(
+\begin{array}{cccc}
+K,& 0,& \dots& 0 \\
+0,& K,& \dots& 0 \\
+\vdots& \vdots& \ddots& \vdots \\
+0,& 0,& \dots& K
+\end{array}
+\right)
+= K^n \det(I) = K^n
+$$
+
+$$
+\det
+\left(
+\begin{array}{ccccc}
+1,& 1,& 1,& \dots& 1 \\
+1,& 2,& 2,& \dots& 2 \\
+1,& 2,& 3,& \dots& 3 \\
+\vdots& \vdots& \vdots& \ddots& \vdots \\
+1,& 2,& 3,& \dots& n
+\end{array}
+\right)
+= \det \left[ 
+\left(
+\begin{array}{cccc}
+1,& 0,& \dots& 0 \\
+1,& 1,& \dots& 0 \\
+\vdots& \vdots& \ddots& \vdots \\
+1,& 1,& \dots& 1
+\end{array}
+\right)
+\left(
+\begin{array}{cccc}
+1,& 1,& \dots& 1 \\
+0,& 1,& \dots& 1 \\
+\vdots& \vdots& \ddots& \vdots \\
+0,& 0,& \dots& 1
+\end{array}
+\right)
+\right]
+= 1
+$$
+
+```
 
 
-> Examples of different sizes
+```{admonition} Fact
+:class: important
+
+If some row or column of $A$ is added to another one after being multiplied by a scalar $\alpha \ne 0$, 
+then the determinant of the resulting matrix is the same as the determinant of $A$.
+
+In other words, the determinant is invariant under elementary row or column operations of type 3 (see [next lecture](https://math.iskh.me/07.linear_systems.html#determinants-under-gaussian-elimination)).
+
+```
+- we will talk about this next week
 
 
+### Where determinants are used
+
+- Fundamental properties of the linear operators given by the corresponding matrix
+- Inversion of matrices
+- Solving systems of linear equations ([Cramer's rule](https://en.wikipedia.org/wiki/Cramer%27s_rule))
+- Finding Eigenvalues and eigenvectors
+- Determining positive definiteness of matrices
+- etc, etc.
+
+
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/16apr/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/16apr/2.png
+   :width: 75%
+```
+
+````
+
+
+```{dropdown} Further reading and self-learning
+
+- Excellent visualizations of concepts partially covered in this lecture, strongly recommended for further study
+[3Blue1Brown: Essence of linear algebra](https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab)
+
+```
