--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -1,4 +1,16 @@
-# Univariate integration 
+---
+jupytext:
+  formats: md:myst
+  text_representation:
+    extension: .md
+    format_name: myst
+kernelspec:
+  display_name: Python 3
+  language: python
+  name: python3
+---
+
+# 📖 Univariate integration 
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
