--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -1268,8 +1268,8 @@ $$
 
 ## Some economic and econometric applications
 
-- Consumer Welfare: Total Consumer Benefit, Consumer Surplus and Change in Consumer Surplus. (See separate document)
-- Producer Welfare: Total Operating Costs, Producers Surplus, and Change in Producers Surplus. (See separate document)
+- Consumer Welfare: Total Consumer Benefit, Consumer Surplus and Change in Consumer Surplus
+- Producer Welfare: Total Operating Costs, Producers Surplus, and Change in Producers Surplus
 - Choice over Time: Lifetime Utility
 - Choice under Uncertainty: Expected Utility
 - The Relationship between Probability Density Functions and Cumulative Distribution Functions (Probability and statistics)
