Tutorial problems for week 11 (kappa)

--- a/ps10.kappa.md
+++ b/ps10.kappa.md
@@ -73,3 +73,13 @@ The symbol 🍹 indicates additional problems.
 :::::
 ::::::
 
+## $\kappa$.6
+
+::::::{tab-set}
+:::::{tab-item} Formulation
+:::{include} tutorial_problems/kappa6.md
+:::::
+:::::{tab-item} Solution
+:::{include} tutorial_problems/kappa6.sol.md
+:::::
+::::::
