announcements for week 11

--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -10,6 +10,48 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Online Test 5 on **Monday May 20**
+
+    - 30 minutes, open book
+    - 10% of the final grade
+
+2. The final exam 
+
+    - **Friday May 31, 2pm**
+    - 3 hours exam + 15 minutes reading time
+    - closed book, no materials allowed
+    - Manning Clark Hall, room 1.04, Cultural Centre Kambri
+
+3. Tutorials replaced by consultations in week 12
+
+    - [Same schedule and locations](https://math.iskh.me/index.html#tutorial-times)
+    - Questions and answers
+    - You can come to multiple sessions through the week
+
+4. My consultation hours
+    
+    - **Wednesday May 22, 9:30-11:00**
+    - [Office 1021, HW Arndt Building](https://math.iskh.me/index.html#course-convener-and-lecturer)
+    - Come with specific questions
+
+5. Next lecture: revision and consultation
+
+    - 1/2 revision and exemplar exam problem
+    - 1/2 questions and answers
+    - Free participation
+
+6. Feedback
+
+    - Very important
+    - Don't miss SELT feedback forms
+    - Evaluate your convener, all lecturers and your tutor
+
+
+````
 
 
 # 📖 Univariate integration 
@@ -82,29 +124,31 @@ These are references that are suitable for a third-year undergraduate economics 
 ```{admonition} Definition
 :class: caution
 
-Let $I \in \mathbb{R}$ be a non-empty open interval of real numbers that contains more than a single point. In otherwords,
-$I=(a, b)=\{x \in \mathbb{R}: a<x<b\}$
+Let $I=(a, b)=\{x \in \mathbb{R}: a<x<b\}$
 wherea $\in \mathbb{R}, b \in \mathbb{R}$, and $a<b$
 
-Let $f: I \to \mathbb{R}$ be some given univariate real-valued function. Suppose that there exists some function $F: I \to \mathbb{R}$ such that
+Let $f: I \to \mathbb{R}$ be some univariate real-valued function. 
+Suppose that there exists some function $F: I \to \mathbb{R}$ such that
 
 $$
 F^{\prime}(x)=\frac{d F(x)}{dx}=f(x) \text { for all } x \in I
 $$
 
-In this case, the function $F(x)$ is said to be an **anti-derivative** of the function $f(x)$ on the interval $I$
+In this case, the function $F(x)$ is called an **anti-derivative** of the function $f(x)$ on the interval $I$
 
 ```
+
+- Note that $I \in \mathbb{R}$ is a non-empty open interval of real numbers that contains more than a single point
 
 ```{admonition} Example
 :class: tip
 
 $$
-f(x) = 3x^2 + 4x + 1 \quad \implies \quad F(x) = x^3 + 2x^2 + x + 5 \text{ is anti-derivative}
+f(x) = 3x^2 + 4x + 1 \quad \implies \quad F(x) = x^3 + 2x^2 + x + 5 \; \text{ is anti-derivative}
 $$
 
 $$
-f(x) = \exp(x) \quad \to \quad F(x) = exp(x)-1 \text{ is anti-derivative}
+f(x) = \exp(x) \quad \to \quad F(x) = exp(x)-1 \; \text{ is anti-derivative}
 $$
 
 ```
@@ -177,7 +221,7 @@ Note, however, that it is common to drop the set notation and simply use the int
 In other words, the indefinite integral of $f(x)$ on the interval $I$ is
 
 $$
-\int f(x) dx = F(x)+C: C \in \mathbb{R}
+\int f(x) dx = F(x)+C
 $$
 
 where $C \in \mathbb{R}$ is an arbitrary constant. Note that here, the arbitrary constant $C$ is interpreted as being truly arbitrary, rather than taking on a particular value
@@ -306,7 +350,7 @@ Together the previous two facts establish the following result
 ```{admonition} Fact
 :class: important
 
-Suppose that the functions $f_{i}: I \to \mathbb{R}, i \in\{1,2, \cdots, n\}$, are all at least once continuously differentiable on $I$, where $I \subseteq \mathbb{R}$ is a connected open interval
+Suppose that the functions $f_{i}: I \to \mathbb{R}, i \in\{1,2, \cdots, n\}$, are all at least once continuously differentiable on $I$, where $I \subseteq \mathbb{R}$ is a connected open interval.
 Suppose also that $k_{i} \in \mathbb{R}, i \in\{1,2, \cdots, n\}$, are some given constants, and $C \in \mathbb{R}$ is an arbitrary constant
 Suppose as well that $F_{i}^{\prime}(x)=f_{i}(x)$ for all $x \in I$ and for each $i \in\{1,2, \cdots, n\}$
 The following formula applies to $\left\{f_{i}(x)\right\}_{i=1}^{n}$
